# RAGcheck

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  run_test.py
.github/workflows/: ci.yml
docs/: index.md
examples/: ci_test_cases.json  langchain_integration.py  local_ollama.py  quickstart.py
github_action/: action.yml
ragcheck/: __init__.py  cli.py
ragcheck/connectors/: __init__.py  custom.py  langchain.py  llamaindex.py
ragcheck/core/: __init__.py  pipeline.py  schema.py
ragcheck/core/evaluators/: __init__.py  answer_relevance.py  base.py  chunk_utilization.py  context_recall.py  context_relevance.py  faithfulness.py  noise_sensitivity.py
ragcheck/core/judges/: __init__.py  anthropic_judge.py  base.py  litellm_judge.py  local_judge.py  openai_judge.py
ragcheck/dashboard/: __init__.py  app.py
ragcheck/reporters/: __init__.py  html_report.py  json_export.py  terminal.py
tests/: conftest.py  test_cli.py  test_connectors.py  test_evaluators.py  test_judges.py  test_pipeline.py  test_public_api.py  test_reporters.py  test_schema.py
tests/fixtures/: sample_dataset.json
