[tool.poetry]
name = "ragcheck"
version = "0.1.0"
description = "An open-source toolkit to measure, debug, and improve your RAG pipeline quality."
authors = ["Rajmani Shukla <rajanshukla756@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/RajmaniShukla/ragcheck"
repository = "https://github.com/RajmaniShukla/ragcheck"
documentation = "https://ragcheck.readthedocs.io"
keywords = ["rag", "llm", "evaluation", "retrieval", "nlp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "ragcheck" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
litellm = "^1.40"
typer = { extras = ["all"], version = "^0.12" }
rich = "^13.0"
httpx = "^0.27"
jinja2 = "^3.1"
aiohttp = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"

[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.35"
plotly = "^5.22"
pandas = "^2.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.5"
mkdocstrings = { extras = ["python"], version = "^0.25" }

[tool.poetry.scripts]
ragcheck = "ragcheck.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "A"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"ragcheck/cli.py" = ["B008"]  # typer.Option() in function defaults is intentional
"tests/**" = ["S101"]         # assert is fine in tests

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=ragcheck --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
